app/assets/style/main.css
@import "themes/dark.css";
@import "animation.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body,
#__nuxt,
#__layout {
  height: 100% !important;
  width: 100% !important;

  ::-webkit-scrollbar {
    width: 0.5rem;
    padding: 0.5rem;
  }

  ::-webkit-scrollbar-track {
    background: var(--bg-secondary);
  }

  ::-webkit-scrollbar-thumb {
    background: var(--bg-card);
    border-radius: 0.5rem;
  }
}

@layer components {
  .text-gradient {
    @apply bg-clip-text text-transparent;
    @apply bg-gradient-to-bl from-accent-primary to-accent-secondary;
  }

  .white-gradient-tb {
    @apply bg-clip-text text-transparent tracking-wide;
    @apply bg-gradient-to-b from-white to-gray-400;
  }

  .linebreak {
    position: relative;
    left: 0;
    top: 0;
    right: 0;
    bottom: auto;
    width: 100%;
    height: 1px;
    margin: 0 auto;
    background-image: linear-gradient(
      96.18deg,
      rgba(215, 196, 255, 0) 10%,
      rgba(200, 200, 200, 0.24) 50%,
      rgba(215, 196, 255, 0) 90%
    );
  }

  .text-white-shadow {
    text-shadow:
      0 4px 10px rgba(0, 87, 255, 0.2),
      0 -4px 10px rgba(255, 90, 0, 0.15),
      0 0 30px rgba(255, 255, 255, 0.2);
  }

  .white-gradient {
    @apply bg-gradient-to-b from-white/25 to-white bg-clip-text text-lg font-medium text-transparent;
  }

  .text-white-gradient {
    background-image: linear-gradient(#f2f2f2 50%, rgba(242, 242, 242, 0.2));
    background-clip: text;
    font-style: italic;
    @apply tracking-wider;
  }
}

.writing {
  @apply prose antialiased font-geist text-gray-700/90 dark:text-gray-400/80 leading-relaxed;
  @apply prose-h1:text-2xl prose-h1:mb-0 sm:prose-h1:text-3xl prose-h1:text-zinc-900 dark:prose-h1:text-zinc-100 prose-h1:italic prose-h1:font-[600];
  @apply prose-h2:text-xl sm:prose-h2:text-2xl prose-h2:text-zinc-900 dark:prose-h2:text-zinc-100;
  @apply prose-h3:text-lg sm:prose-h3:text-xl prose-h3:text-zinc-900 dark:prose-h3:text-zinc-100;
  @apply prose-h4:text-base sm:prose-h4:text-lg prose-h4:text-zinc-900 dark:prose-h4:text-zinc-100;
  @apply prose-h5:text-base prose-h5:text-zinc-900 dark:prose-h5:text-zinc-100;
  @apply prose-a:text-blue-500 dark:prose-a:text-blue-500 prose-a:underline;
  @apply prose-pre:text-sm sm:prose-pre:text-base prose-pre:text-zinc-900 dark:prose-pre:text-zinc-100;
  @apply prose-code:text-zinc-900 dark:prose-code:text-zinc-100;
  @apply prose-strong:text-gray-900 dark:prose-strong:text-gray-100 prose-strong:font-[500];
  @apply prose-p:m-0;
}

